--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --extra-index-url https://download.pytorch.org/whl/cpu -r requirements.txt
+          grep -v "pywinpty\|pywin32\|qtconsole\|QtPy" requirements.txt > /tmp/ci_requirements.txt
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu -r /tmp/ci_requirements.txt
 
       - name: Lint with Ruff
         run: ruff check src/ api/ tests/
